# openvino

inference-engine/samples/hello_va_object_detection_ssd/: CMakeLists.txt  README.md  main.cpp
inference-engine/samples/hello_va_object_detection_ssd/va_video/: CMakeLists.txt
inference-engine/samples/hello_va_object_detection_ssd/va_video/include/: fourcc.h  gst_vaapi_decoder.h  va_surfaces_pool.h  vaapi_context.h  vaapi_image.h  vaapi_images.h  vaapi_utils.h
inference-engine/samples/hello_va_object_detection_ssd/va_video/src/: gst_vaapi_decoder.cpp  va_surfaces_pool.cpp  vaapi_context.cpp  vaapi_image.cpp  vaapi_images.cpp
samples/cpp/benchmark_app/: inputs_filling.cpp  inputs_filling.hpp  inputs_full_cfg.cpp  inputs_full_cfg.hpp  main.cpp  remote_tensors_filling.cpp  remote_tensors_filling.hpp  utils.cpp  utils.hpp
